# libindigo-rs

./: .gitignore  .gitmodules  .rooignore  BUILD.md  CHANGES.md  CI_CD_STRATEGY.md  Cargo.toml  ISSUES.md  NOTES.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_CLIENT_IMPLEMENTATION.md  PHASE3_COMPLETE.md  PHASE6_CONSTANTS_EXTRACTION.md  PROPERTY_STREAMING_BUG_FIX.md  PROPERTY_STREAMING_BUG_REPORT.md  PROPERTY_STREAMING_FIX_COMPLETE.md  README.md  REFACTORING_COMPLETE.md  build.rs  props.rs  rust-toolchain.toml  test_constants
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  config.yml  discussion.yml  enhancement.yml  tracking.yml
.github/workflows/: README.md  rust.yml  setup-labels.yml
.roo/: mcp.json
.roorules/: architect.md  ask.md  changes.md  code.md  debug.md  documentation.md  git.md  github.md  issues.md  logging.md  markdown.md  orchestrator.md  planning.md  tools.md
app/: Cargo.toml  README.md  build.rs
app/libindigo-rs-example-app/resources/: resources.gresource.xml  server_panel.ui  window.ui
app/src/: main.rs
app/src/server_object/: imp.rs  mod.rs
app/src/server_panel/: imp.rs  mod.rs
app/src/window/: imp.rs  mod.rs
build_utils/: Cargo.toml
build_utils/src/: lib.rs
doc/: README.md  github-issues-guide.md  github-setup-instructions.md  index.md  roo-workflow-scheme.md  transport_implementation.md  ways-of-working.md
doc/ai/policy/: git.md
doc/reviews/: issue-6-refactoring-review.md
docs/: build-system.md  constants-extraction.md  index.md  logging.md  monitoring.md
docs/architecture/: client-strategies.md  mock-server.md
docs/protocols/: json-protocol.md
examples/: auto_connect.rs  continuous_discovery.rs  discover_servers.rs  discovery_with_filter.rs  property_streaming.rs
ffi/: Cargo.toml  README.md
ffi/src/: async_ffi.rs  callback.rs  conversion.rs  device_bridge.rs  discovery.rs  ffi.rs  lib.rs  monitoring.rs
plans/: BUILD_STATUS.md  MACOS_BUILD_FIX.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_PLAN.md  PHASE3_BUILD_SIMPLIFICATION.md  PHASE5_DISCOVERY_MIGRATION.md  README.md  REFACTORING_PHASE4.md  TRANSPORT_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  ci-cd-strategy.md  code-review-and-architecture.md  crate-restructuring-architecture-v2.md  crate-restructuring-architecture-v3.md  crate-restructuring-architecture.md  discovery-implementation.md  documentation-organization.md  feature-independence-refactoring.md  github-issues-to-create.md  immediate-ci-fix.md  indigo-constants-extraction.md  integration-test-server-config.md  integration_test_harness_architecture.md  issues.md  json-protocol-implementation.md  mission-control-monitoring-migration.md  mock-indigo-server-architecture.md  server-monitoring-architecture.md  trait-based-device-api-v3.md  zeroconf_discovery_architecture.md
plans/archive/: phase1-complete.md  phase2-complete.md  phase3-client-implementation.md  phase3-complete.md  phase3-json-complete.md
relm/: Cargo.toml  README.md  build.sh
relm/.cargo/: config.toml
relm/src/: device.rs  indi-1.7.dtd  main.rs  property.rs  server.rs
rs/: Cargo.toml  README.md
rs/examples/: property_streaming.rs
rs/src/: client.rs  lib.rs  protocol.rs  protocol_json.rs  protocol_negotiation.rs  transport.rs
rs/src/discovery/: announce.rs  api.rs  error.rs  mdns_impl.rs  mod.rs
rs/src/monitoring/: heartbeat.rs  mod.rs  monitor.rs  server_check.rs  status.rs
scripts/: update_constants.sh  update_version.sh
src/: auto.rs  bus.rs  client.rs  client_old.rs  constants.rs  device.rs  driver.rs  error.rs  indigo copy.rs  indigo.rs  lib.rs  logging.rs  model.rs  model2.rs  msg.rs  number.rs  property.rs  property_bak.rs  protocol.rs  server.rs  spike.rs  sys.rs
src/client/: builder.rs  mod.rs  monitoring.rs  strategy.rs
src/device/: context.rs  driver.rs  mod.rs  property_manager.rs  registry.rs
src/device/traits/: base.rs  camera.rs  filter_wheel.rs  focuser.rs  guider.rs  mod.rs  mount.rs  proxy.rs
src/discovery/: api.rs  error.rs  mod.rs  zeroconf_impl.rs
src/strategies/: async_ffi.rs  ffi.rs  mod.rs  rs.rs
src/strategies/rs/: client.rs  mod.rs  protocol.rs  protocol_json.rs  protocol_negotiation.rs  transport.rs
src/types/: device.rs  mod.rs  property.rs  value.rs
sys/: Cargo.toml  LICENSE.md  NOTES.md  README.md  build.rs
sys/src/: lib.rs
tests/: HARNESS_IMPLEMENTATION.md  HARNESS_IMPLEMENTATION_COMPLETE.md  INTEGRATION_TEST_MIGRATION.md  ISOLATION_ENHANCEMENTS_SUMMARY.md  JSON_PROTOCOL_TEST_SUMMARY.md  README_PURE_RUST_TESTS.md  TEST_ISOLATION_GUIDE.md  blob_tests.rs  device_driver_tests.rs  device_traits_tests.rs  discovery_tests.rs  ffi_integration_tests.rs  integration_test.rs  interface.rs  isolation_tests.rs  json_protocol_tests.rs.disabled  mock_server_test.rs  protocol.rs  protocol_negotiation_tests.rs  pure_rust_client_integration.rs.disabled  pure_rust_protocol_compliance.rs.disabled  sanity.rs  transport_integration.rs.disabled
tests/common/: mod.rs
tests/harness/: README.md  config.rs  harness.rs  health.rs  mod.rs  server.rs  state.rs
tests/mock_server/: builder.rs  connection.rs  device.rs  handler.rs  mod.rs  property.rs  server.rs  subscription.rs
tests/mock_server/presets/: ccd.rs  mod.rs  mount.rs
