[workspace]
# Note: relm is excluded because it requires GTK4 system libraries and needs refactoring
# to use the new API. See relm/README.md for details.
members = [".", "sys", "rs", "ffi"]
exclude = ["relm"]

[package]
name = "libindigo"
description = "Core API for developing INDIGO astronomy clients and devices."
version = "0.2.0+INDIGO.2.0.300"
license = "MIT"
homepage = "https://github.com/chrsoo/libindigo-rs"
repository = "https://github.com/chrsoo/libindigo-rs"
readme = "README.md"
keywords = ["astronomy", "astrophotography", "indigo", "indi"]
categories = ["api-bindings", "asynchronous", "hardware-support"]
edition = "2021"

[dependencies]
# Core dependencies for types and error handling
thiserror = "1.0"
async-trait = "0.1"

# Async runtime (required for ClientStrategy trait)
tokio = { version = "1.35", features = ["sync"] }

[build-dependencies]
bindgen = "0.71"
regex = "1.11"
once_cell = "1.21"

[dev-dependencies]
test-log = "0.2.16"
env_logger = "*"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
