[workspace]
# Note: relm is excluded because it requires GTK4 system libraries and needs refactoring
# to use the new API. See relm/README.md for details.
members = [".", "sys", "rs", "ffi"]
exclude = ["relm"]

[package]
name = "libindigo"
description = "Core API for developing INDIGO astronomy clients and devices."
version = "0.3.2+INDIGO.2.0.300"
license = "MIT"
homepage = "https://github.com/chrsoo/libindigo-rs"
repository = "https://github.com/chrsoo/libindigo-rs"
readme = "README.md"
keywords = ["astronomy", "astrophotography", "indigo", "indi"]
categories = ["api-bindings", "asynchronous", "hardware-support"]
edition = "2021"

[features]
default = ["ffi-strategy"]

# Strategy selection (mutually exclusive)
rs-strategy = []
ffi-strategy = []

# Discovery support (pass-through to libindigo-rs)
discovery = ["libindigo-rs/discovery"]

# Test support
test-server = []

[dependencies]
# Core dependencies for types and error handling
thiserror = "1.0"
async-trait = "0.1"

# Async runtime (required for ClientStrategy trait)
tokio = { version = "1.35", features = ["sync"] }

# Random number generation for mock server simulations
rand = "0.8"

[build-dependencies]
bindgen = "0.71"
regex = "1.11"
once_cell = "1.21"

[dev-dependencies]
test-log = "0.2.16"
env_logger = "0.11"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"] }
libindigo-rs = { path = "rs" }
libindigo-ffi = { path = "ffi", features = ["async"] }
once_cell = "1.21"
serial_test = "3.0"
