[package]
name = "libindigo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# glib-2-0-sys = "0.46.4"
# glib-sys = "0.18.1"
# gobject-2-0-sys = "0.46.4"
# gobject-sys = "0.20.4"
libindigo = { path = ".." }
log = "0.4.22"
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_16"] }

[build-dependencies]
glib-build-tools = "0.20.0"
