[package]
name = "libindigo-ffi"
version = "0.3.3"
edition = "2021"
authors = ["Christoffer Soop <christoffer.soop@gmail.com>"]
description = "FFI-based implementation of the INDIGO protocol client using C library"
license = "MIT"
homepage = "https://github.com/chrsoo/libindigo-rs"
repository = "https://github.com/chrsoo/libindigo-rs"
readme = "README.md"
keywords = ["astronomy", "astrophotography", "indigo", "indi"]
categories = ["api-bindings", "asynchronous", "hardware-support"]

[features]
default = ["client"]
client = []
device = []                           # Device driver support
async = ["tokio", "futures"]
monitoring = ["libindigo/monitoring"] # Server monitoring support
sys-available = []                    # Automatically enabled when sys crate builds successfully

[dependencies]
# Core API from libindigo crate
libindigo = { path = "..", version = "0.3.3" }

# FFI bindings to C INDIGO library
libindigo-sys = { path = "../sys", version = "0.3.3" }

# Async runtime (optional, for async FFI wrapper)
tokio = { version = "1.35", features = [
    "sync",
    "rt",
    "rt-multi-thread",
], optional = true }

# Futures for Stream trait (optional, for async FFI wrapper)
futures = { version = "0.3", optional = true }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
