[package]
name = "relm"
version = "0.1.0"
edition = "2021"

[dependencies]
relm4 = "0.9.1"
relm4-components = "0.9.1"
tokio = { version = "1.40.0", features = ["rt", "time"] }
# relm4-icons = "0.9.0"
libindigo = { path = ".." }
log = "0.4.22"
glib_logger = "0.1.0"
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_16"] }
