[package]
name = "libindigo-rs"
version = "0.3.3"
edition = "2021"
authors = ["Christoffer Soop <christoffer.soop@gmail.com>"]
description = "Pure Rust implementation of the INDIGO protocol client"
license = "MIT"
homepage = "https://github.com/chrsoo/libindigo-rs"
repository = "https://github.com/chrsoo/libindigo-rs"
readme = "README.md"
keywords = ["astronomy", "astrophotography", "indigo", "indi"]
categories = ["api-bindings", "asynchronous", "hardware-support"]

[features]
default = ["client"]
client = []
device = [] # Stub for future device driver support
discovery = [
    "libindigo/discovery",
    "mdns-sd",
] # Optional server discovery via mDNS
monitoring = [
    "libindigo/monitoring",
    "surge-ping",
    "socket2",
] # Optional server monitoring (pure Rust ICMP + TCP)

[dependencies]
# Core API from libindigo crate
libindigo = { path = "..", version = "0.3.3", default-features = false, features = [
    "discovery",
    "monitoring",
] }

# Async runtime
tokio = { version = "1.35", features = [
    "net",
    "io-util",
    "sync",
    "time",
    "rt",
    "rt-multi-thread",
    "macros",
] }

# XML parsing
quick-xml = { version = "0.36", features = ["serialize"] }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64 encoding for BLOBs
base64 = "0.22"

# Error handling
thiserror = "2"

# Random number generation (for ICMP ping identifiers)
rand = "0.8"

# Logging
tracing = "0.1"

# Async trait support
async-trait = "0.1"

# Optional: mDNS server discovery (pure Rust)
mdns-sd = { version = "0.11", optional = true }

# Optional: Server monitoring (pure Rust ICMP + TCP)
surge-ping = { version = "0.8", optional = true }
socket2 = { version = "0.5", optional = true }

# Hostname for service announcement
hostname = "0.4"

# Logging subscriber (for examples and binaries)
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
